Added controllers and models, named 'Comment' and 'Pages', now the models are related.

--- a/app/views/animes/_form.html.erb
+++ b/app/views/animes/_form.html.erb
@@ -9,6 +9,11 @@
 </p>
 
 <p>
+  <%= f.label :page_id %><br>
+  <%= f.text_field(:page_id, {:class => 'form-control'}) %>
+</p>
+
+<p>
   <%= f.label :idPage %><br>
   <%= f.text_field(:idPage, {:class => 'form-control'}) %>
 </p>
