--- a/app/views/animes/index.html.erb
+++ b/app/views/animes/index.html.erb
@@ -5,19 +5,7 @@
   <div class="well">
     <h3><%= link_to anime.name, anime %></h3>
     <p>Capitulos:  <%= anime.chapters %></p>
-    <p>Pagina:  <%= anime.idPage %></p>
+    <p>Pagina:  <%= anime.page.name %></p>
+    <a>link:  <%= anime.page.url %></a>
   </div>
-<% end %>
-
-<%= link_to 'Ver', "/uno", :class=> "btn btn-primary"%>
-
-<br><br>
-<%= form_for :buscarAnime, url: '/uno' do |f| %>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field(:name, {:class => 'form-control'}) %>
-  </p>
-  <p>
-    <%= f.submit({:class => 'btn btn-primary'})%>
-  </p>
 <% end %>
