--- a/app/views/animes/show.html.erb
+++ b/app/views/animes/show.html.erb
@@ -1,7 +1,9 @@
 <br><br>
 <h1><%= @anime.name %><h1>
-<h3><%= @anime.chapters %><h3>
-<h2><%= @anime.idPage %><h2>
+<h3><%= @anime.chapters %> - <%= @anime.idPage %><h3>
+<h2>Creado por:  <%= @anime.user.email %><h2>
+<h2>Pagina:  <%= @anime.page.name %><h2>
+
 
 <%= link_to "Edit", edit_anime_path(@anime), :class => 'btn btn-primary' %>
-<%= link_to 'Eliminar', @anime, method: :delete,  :class=> "btn btn-danger"%>
+<%= link_to 'Eliminar', @anime, method: :delete, data: {confirm: 'Estas seguro?'}, :class=> "btn btn-danger"%>
